# EvoLinuxAgent-Public

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  autogen.sh  compass.yml  config.h  configure.ac  configure~  libpam_evo_common_la-main.lo  main.c
config/: config.ini.default
include/: evopam.h  main.h
src/: main.c
